Improvements to Ingredients screen

--- a/frontend/src/styles/recommendations.module.css
+++ b/frontend/src/styles/recommendations.module.css
@@ -35,3 +35,86 @@
   font-size: 20px;
   color: black;
 }
+.containerImage {
+  position: relative;
+  column-count: 4;
+  padding: 20px;
+}
+.popularPlates {
+  font-size: 30px;
+  color: black;
+  position: relative;
+  left: 1000px;
+  padding: 10%;
+}
+.yummy {
+  font-size: 50px;
+  position: absolute;
+  top: 220%;
+  padding: -50%;
+}
+.image {
+  width: 150%;
+  transition: 0.2s ease ease-in-out;
+
+  transform: translate(50%, 170%);
+}
+.image:hover img {
+  transform: scale(0.9);
+}
+h1 {
+  position: absolute;
+  padding: 5px;
+  margin: 5px;
+  font-size: 20px;
+  background-color: gray;
+  color: whitesmoke;
+  border-radius: 5px;
+  opacity: 0;
+  z-index: 1;
+  transition: 0.2 ease-in-out;
+}
+.image:hover h1 {
+  opacity: 0.5;
+}
+
+@media screen and(max-width:1024px) {
+  .container {
+    font-size: 20px;
+  }
+}
+@media screen and(max-width:768px) {
+  .container {
+    column-count: 3;
+  }
+}
+@media screen and(max-width:425px) {
+  .container {
+    column-count: 2;
+    flex: 50%;
+    max-width: 50%;
+  }
+  .h1 {
+    font-size: 15px;
+  }
+}
+@media screen and(max-width:375px) {
+  .container {
+    column-count: 1;
+    flex: 50%;
+    max-width: 50%;
+  }
+  .h1 {
+    font-size: 9px;
+  }
+}
+.deliciusMeal {
+  width: 100%;
+  height: 30vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-left: 15%;
+  margin-top: -100%;
+  margin-bottom: 0%;
+}
