--- a/frontend/src/styles/home.module.css
+++ b/frontend/src/styles/home.module.css
@@ -11,7 +11,7 @@
 .container {
   height: 100vh;
   width: 100%;
-  background-image: url("../img/TastyDinner1.png");
+  background-image: url("../img/anotherfood.jpg");
   background-position: center;
   background-size: cover;
   padding-left: 5%;
@@ -19,9 +19,10 @@
   background-color: orange;
   box-sizing: border-box;
   position: relative;
+  opacity: 0.5;
 }
+
 body {
-  background: orange;
   background-size: cover;
 }
 .image {
@@ -31,8 +32,8 @@ body {
   align-items: flex-end;
   border-radius: 70%;
 }
-h1 {
-  position: relative;
+.purpose {
+  position: absolute;
   left: 300px;
   top: 200px;
   font-size: 50px;
