--- a/frontend/src/styles/ingredients.module.css
+++ b/frontend/src/styles/ingredients.module.css
@@ -36,24 +36,57 @@
   color: black;
 }
 
-.inputContainer {
-  background-color: rgb(255, 167, 67);
+.bottomHalf {
+  background-color: lightsalmon;
   width: 100%;
   height: 55vh;
   display: flex;
+  justify-content: center;
+  padding: 2%;
+}
+
+.inputContainer {
+  width: 90%;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  border-radius: 20px;
 }
 
 .enterIngredients {
-  width: 63%;
+  width: 50%;
   padding: 3%;
-  padding-left: 15%;
+  border-radius: 20px;
+  background-color: rgb(171, 215, 82);
+  margin-right: 5%;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.5);
 }
 
 .uploadIngredients {
   padding: 3%;
+  border-radius: 20px;
+  background-color: rgb(171, 215, 82);
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.5);
 }
 
 .bottomBackground {
   background-color: rgb(171, 215, 82);
   height: 15vh;
+}
+
+.tagIngredients {
+  background-color: rgb(171, 215, 82);
+  padding: 1%;
+
+  width: 70%;
+  height: 15vh;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+
+  margin: 0;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
